# ColorTrackingVisualizer

./: .gitignore  CMakeLists.txt  ConfigurationHandler.cpp  ConfigurationHandler.h  LICENSE  OpenCVHandler.cpp  OpenCVHandler.h  OpenGLHandler.cpp  OpenGLHandler.h  README.md  desenharPontos.cpp
